# stm-2026-common

./: .gitignore  .gitmodules  LICENSE
Inc/can/: CANController.h  CANControllerConfig.h
Inc/can/handlers/: handlerPing.h  handlerValve.h
Inc/can/packets/: ValveCmdPacket.h  ValveStatusPacket.h
Inc/dil/: ServoDriver.h  can.h  can_bus.h  can_port.h  can_types.h  ipc_can.h
Inc/valve/: ValveController.h
Src/can/: CANController.c
Src/can/handlers/: handlerPing.c  handlerValve.c
Src/dil/: ServoDriver.c  can.c  can_bus.c  ipc_can.c
Src/valve/: ValveController.c
ld/: README.md  stm32h747_ipc_regions.ld  stm32h747_ipc_sections.ld
logic/Inc/can/: CANControllerConfig.h
logic/Inc/can/packets/: ValveCmdPacket.h  ValveStatusPacket.h
logic/Inc/dil/: can_types.h
logic/Src/can/: CANController.c
logic/Src/can/handlers/: handlerPing.c  handlerValve.c
logic/actuation/interfaces/: valve.hpp
logic/communication/interfaces/: can.hpp
logic/communication/protocol/: fcu_valves.hpp
logic/communication/protocol/can/: can_header.hpp
logic/communication/protocol/command/: RequestState.h  ServoPacket.h  SyncPacket.h  command.hpp  set_state.hpp  set_valve_position.hpp
logic/communication/protocol/command/parser/: command_can_parser.cpp  command_can_parser.hpp  command_ethernet_parser.cpp  command_ethernet_parser.hpp
logic/communication/protocol/ethernet/: ethernet_header.hpp
logic/communication/protocol/telemetry/: adc_info.hpp  adc_state.hpp  adc_status.hpp  can_info.hpp  can_state.hpp  can_status.hpp  ethernet_info.hpp  ethernet_state.hpp  ethernet_status.hpp  storage_error.hpp  storage_info.hpp  storage_state.hpp  storage_status.hpp  system_state.hpp  valve_info.hpp  valve_state.hpp  valve_status.hpp
logic/communication/protocol/telemetry/states/: InterfaceField.h
logic/control/: persistent_state.cpp  persistent_state.hpp  states.hpp
logic/data_integrity/: crc32_polynomial.hpp
platform/actuation/servomotor/: hbl388.cpp  hbl388.hpp
platform/actuation/valve/: ball_valve.cpp  ball_valve.hpp
platform/communication/can/: can_dil.cpp  can_dil.hpp
platform/memory/: backup_ram.cpp  backup_ram.hpp
tests/: CMakeLists.txt  README.md  fetch-googletest.cmake  run.cmake
tests/cmake/: host_tests.cmake
tests/integration/: README.md
tests/logic/communication/protocol/command/: command_test.cpp
tests/logic/control/: persistent_state_test.cpp
tests/support/: fake_valve.hpp  fakes.cpp  fakes.hpp
tests/unit/logic/actuation/: valve_test.cpp
tests/unit/logic/communication/protocol/command/: command_test.cpp
